FIXED NAVIGATION MENU ON MOBILE

--- a/css/general.css
+++ b/css/general.css
@@ -36,7 +36,7 @@ Default: 9px
 
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
 
 * {
   padding: 0;
@@ -47,10 +47,11 @@ Default: 9px
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
-  font-family: 'rubik', sans-serif;
+  font-family: "rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
@@ -58,7 +59,6 @@ body {
   /* Only works if there is nothing absolutely positioned in relation to body */
   overflow-x: hidden;
 }
-
 
 /************************************/
 /* GENERAL REUSABLE COMPONENTS */
@@ -118,11 +118,11 @@ body {
 .heading-primary {
   font-size: 5.2rem;
   line-height: 1.05;
-  margin-bottom: 3.2rem;  
+  margin-bottom: 3.2rem;
 }
 
 .heading-tertiary {
-  font-size: 3.0rem;
+  font-size: 3rem;
   line-height: 1.2;
   margin-bottom: 3.2rem;
 }
@@ -144,7 +144,7 @@ body {
 }
 
 .btn,
-.btn:link, 
+.btn:link,
 .btn:visited {
   display: inline-block;
   text-decoration: none;
@@ -199,7 +199,6 @@ body {
   background-color: #fff;
   color: #555;
 }
-
 
 .link:link,
 .link:visited {
