--- a/css/queries.css
+++ b/css/queries.css
@@ -119,10 +119,12 @@
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
+    z-index: 9999;
   }
 
   .main-nav {
-    background-color: rgb(182, 182, 247);
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
     position: absolute;
     top: 0;
     left: 0;
