--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,6 @@
   background-color: #cf711f;
 }
 
-
 /************************************/
 /* MOBILE NAVIGATION */
 /************************************/
@@ -76,7 +75,23 @@
   display: none;
 }
 
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  background-color: rgba(255, 255, 255, 0.95);
+  padding-top: 0;
+  padding-bottom: 0;
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
 
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
 
 /************************************/
 /* HERO SECTION */
@@ -497,7 +512,7 @@
   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
 
-  background-image: linear-gradient( to right bottom, #eb984e, #e67e22);
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   overflow: hidden;
 
   /* temp */
@@ -567,7 +582,6 @@
   outline: none;
   box-shadow: 0 0 0 0.4rem hsla(27, 83%, 95%, 0.5);
 }
-
 
 /************************************/
 /* SECTION CALL TO ACTION */
